--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Popup</title>
+        <title>Quizlet Match Solver Popup</title>
     </head>
     <body>
         <span style="color:red;">Currently Unavailable.</span>
