Automatically update settings
The settings menu now automatically updates values without having to click the 'Apply Settings' button

--- a/options/options.html
+++ b/options/options.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Quizlet Match Solver</h1>
-        
+
         <div id="settings">
             <h2>Settings</h2>
             <span class="tooltip">
@@ -36,7 +36,8 @@
             </span>
 
             <br><br>
-            <button id="applySettings">Apply Settings</button> <button id="resetSettings">Reset Settings</button>
+            <button id="resetSettings">Reset Settings</button>
+            <!-- <button id="applySettings">Apply Settings</button> -->
         </div>
 
         <script src="options.js"></script>
