--- a/options/options.html
+++ b/options/options.html
@@ -36,7 +36,7 @@
             </span>
 
             <br><br>
-            <button id="resetSettings">Reset Settings</button>
+            <button id="resetCardCache">Reset Card Cache</button> <button id="resetSettings">Reset Settings</button>
             <!-- <button id="applySettings">Apply Settings</button> -->
         </div>
 
