Added version checker
* The tool now shows you when new  updates are available for the tool

--- a/options/options.html
+++ b/options/options.html
@@ -76,6 +76,8 @@
             </fieldset>
         </div>
 
+        <a id="updateText" target="_blank" href="https://github.com/Whitelisted1/Quizlet-Match-Solver"></a>
+
         <div id="buttons">
             <a target="_blank" href="https://github.com/Whitelisted1/Quizlet-Match-Solver"><button>View on Github</button></a>
             <a target="_blank" href="https://github.com/Whitelisted1/Quizlet-Match-Solver/issues/new"><button>Report an issue or suggest changes</button></a>
