Enable Option to toggle extension

--- a/options/options.html
+++ b/options/options.html
@@ -28,6 +28,12 @@
             
             <fieldset id="settings">
                 <legend>Settings</legend>
+
+                <span>Extension Enabled</span>
+                <input id="extensionEnabled" type="checkbox">
+                
+                <br><br>
+
                 <!-- <h2>Settings</h2> -->
                 <span class="tooltip">
                     <span>Default Target Time: </span>
